--- a/LoginMVC/Web.config
+++ b/LoginMVC/Web.config
@@ -9,6 +9,9 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+
+	<!-- ClearingSettlementAPI -->
+	<add key="ClearingSettlementApi:BaseUrl" value="http://vm-app-dev01:329/api/v1" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.8.1" />
